Refactory code v1